<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TubeTastic</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_title">TubeTastic!</string>
    <string name="title_activity_splash">TubeTastic!</string>
    <string name="credit">by Rick Osborne</string>
    <string name="space"></string>
    <string name="high_score">High Score: %d</string>
    <string name="instructions">Start a new game:\nTap the square to align the tubes.</string>
    <string name="resume_game">Resume Game</string>
    <string name="new_game">New Game</string>
    <string name="gfx_cache">Cache Graphics</string>
    <string name="prefs_name">TubeTastic</string>
    <string name="prefs_score_high">score:high</string>
    <string name="prefs_board_tiles">board:tiles</string>
	<string name="title_activity_about">About</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_newgame">New Game From Zero</string>
	<string name="licenses">Licenses &amp; Thanks</string>
	<string name="license_text">The following people provided invaluable feedback during the development of this game:\nMichael Celey, http://michaelceley.com\nJuan Diego Benitez, @jdbntz\nJoshua Donlan\nAnna Gemmati\n\nThis app uses the "Kite One Regular" font, © 2012 by Eduardo Tunni (http://www.tipo.net.ar), licensed under the SIL Open Font License, Version 1.1.  See (http://scripts.sil.org/OFL) for more details.\n\nThis app uses the "Satisfy Regular" font by Squid (aka Dave Cohen of Sideshow Foundry), licensed under the Apache 2.0 License.  See (http://www.apache.org/licenses/) for more details.\n\nLibGDX by Badlogic Games is the graphics library used to make this app, used under the Apache 2.0 License. See (http://libgdx.badlogicgames.com/) for more details.\n\nThe color picker used in the Settings was created by Sergey Margaritov and is available at (https://github.com/attenzione/android-ColorPickerPreference) under the Apache 2.0 license.</string>
	<!-- Color Picker -->
	<string name="dialog_color_picker">Color Picker</string>
	<string name="press_color_to_apply">Press on Color to apply</string>
	<string name="pref_title_colors">Colors</string>
	<string name="pref_summary_colors">Customize the game colors</string>
	<string name="color_custom">Custom Colors</string>
	<string name="color_custom_summary">Change the default colors to your own.</string>
	<string name="color_source">Left-Connected Tiles</string>
	<string name="color_source_summary">Background color for left-side tiles.</string>
	<string name="color_sink">Right-Connected Tiles</string>
	<string name="color_sink_summary">Background color for right-side tiles.</string>
	<string name="color_none">Unconnected Tiles</string>
	<string name="color_none_summary">Background color for middle tiles.</string>
	<string name="color_arc">Connector Lines</string>
	<string name="color_arc_summary">Foreground color for tile connectors.</string>
	<string name="color_score">Scoreboard</string>
	<string name="color_score_summary">Text color for the score.</string>
	<string name="color_back">Background</string>
	<string name="color_back_summary">Background color for the screen.</string>
	<string name="pref_title_sound">Sounds</string>
	<string name="play_sound">Play Sounds</string>
	<string name="play_sound_summary">Toggle interaction sounds</string>
	<string name="randomize_tiles">Randomize Tiles</string>
	<string name="pref_title_accel">Accelerometer</string>
	<string name="accel_enable">Enable Accelerometer</string>
	<string name="accel_enable_summary">Shake to randomize, but drains battery.</string>

</resources>
