<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/pref_title_colors">

	<CheckBoxPreference
			android:key="color:custom"
	        android:title="@string/color_custom"
	        android:summary="@string/color_custom_summary"
	        android:defaultValue="false"
			/>

	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:source"
			android:title="@string/color_source"
			android:summary="@string/color_source_summary"
			android:defaultValue="@color/color_source"
			alphaSlider="false"
	        hexValue="true"
	        android:dependency="color:custom"
			/>

	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:sink"
			android:title="@string/color_sink"
			android:summary="@string/color_sink_summary"
			android:defaultValue="@color/color_sink"
			alphaSlider="false"
			hexValue="true"
			android:dependency="color:custom"
			/>

	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:none"
			android:title="@string/color_none"
			android:summary="@string/color_none_summary"
			android:defaultValue="@color/color_none"
			alphaSlider="false"
			hexValue="true"
			android:dependency="color:custom"
			/>

	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:arc"
			android:title="@string/color_arc"
			android:summary="@string/color_arc_summary"
			android:defaultValue="@color/color_arc"
			alphaSlider="false"
			hexValue="true"
			android:dependency="color:custom"
			/>

	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:score"
			android:title="@string/color_score"
			android:summary="@string/color_score_summary"
			android:defaultValue="@color/color_score"
			alphaSlider="false"
			hexValue="true"
			android:dependency="color:custom"
			/>
	<net.margaritov.preference.colorpicker.ColorPickerPreference
			android:key="color:back"
			android:title="@string/color_back"
			android:summary="@string/color_back_summary"
			android:defaultValue="@color/color_back"
			alphaSlider="false"
			hexValue="true"
			android:dependency="color:custom"
			/>


	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_title_sound">

		<CheckBoxPreference
				android:key="sound:global"
		        android:title="@string/play_sound"
		        android:summary="@string/play_sound_summary"
		        android:defaultValue="true"
				/>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_title_accel">

		<CheckBoxPreference
				android:key="accel:enabled"
				android:title="@string/accel_enable"
				android:summary="@string/accel_enable_summary"
				android:defaultValue="true"
				/>

	</PreferenceCategory>

</PreferenceScreen>