<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/activity_horizontal_margin"
	style="@style/FullScreenActivity">
	<ImageView
		android:id="@+id/splash_title_img"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_marginTop="@dimen/splash_margin_top"
		android:src="@drawable/splash_title"
		android:contentDescription="@string/app_title"
		android:scaleType="centerInside"
		/>
	<org.rickosborne.tubetastic.android.FontableTextView
		android:id="@+id/splash_credit"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    app:font="KiteOne-Regular"
	    android:text="@string/credit"
	    android:textAlignment="center"
	    android:singleLine="true"
	    android:layout_marginBottom="@dimen/activity_vertical_margin"
	    android:layout_gravity="center"
	    android:gravity="center"
		android:textSize="@dimen/splash_credit_fontsize"
		style="@style/SplashCredit"/>
	<org.rickosborne.tubetastic.android.FontableTextView
		android:id="@+id/splash_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/splash_margin_top"
		android:layout_marginBottom="@dimen/splash_margin_top"
		android:singleLine="true"
		android:layout_gravity="center"
		android:text="@string/space"
		style="@style/SplashScore"/>
	<Button style="@style/SplashNewGame" android:id="@+id/splash_resumegame" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/resume_game"
	        android:onClick="onResumeGame"
	        android:layout_margin="@dimen/activity_vertical_margin"
	        android:enabled="false"
			/>
	<Button
		android:id="@+id/splash_newgame"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/new_game"
	    style="@style/SplashNewGame"
	    android:onClick="onNewGame"
	    android:layout_margin="@dimen/activity_vertical_margin"/>
</LinearLayout>