<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
	style="@style/AppTheme" android:background="@android:color/black">

	<LinearLayout
			android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
			>

		<org.rickosborne.tubetastic.android.FontableTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        android:text="Tube"
		        style="@style/TitleTube"
				/>
		<org.rickosborne.tubetastic.android.FontableTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Tastic"
				style="@style/TitleTastic"
				/>
		<org.rickosborne.tubetastic.android.FontableTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="!"
				style="@style/TitleBang"
				/>

	</LinearLayout>

	<org.rickosborne.tubetastic.android.FontableTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/credit"
			android:id="@+id/about_credit"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
	        style="@style/SplashCredit"/>
	<org.rickosborne.tubetastic.android.FontableTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/about_version"
			style="@style/SplashCredit"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/licenses"
			android:id="@+id/about_licenses" android:layout_gravity="center"
			android:layout_marginTop="@dimen/activity_vertical_margin"/>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:ems="10"
			android:id="@+id/editText"
			android:background="@android:color/black"
			android:textColor="@android:color/darker_gray"
	        android:text="@string/license_text"
	        android:textSize="@dimen/about_license_sp" android:gravity="top"
	        android:linksClickable="true" android:autoLink="web"
	        />
</LinearLayout>
